# xrootd-lazy-download

./: .gitignore  CMakeLists.txt  README
cmake/: FindXrootd.cmake
config/: lazy-download.conf.in
src/: LocalFileSystem.cc  LocalFileSystem.hh  XrdClLazyDownload.cc  XrdClLazyDownload.hh
